--- a/template/base.html
+++ b/template/base.html
@@ -379,6 +379,9 @@
                     <li><a href="{% url 'apply_to_be_candidate' %}"><i class="fas fa-user-plus"></i> Apply</a></li>
                     <li><a href="{% url 'candidates' %}"><i class="fas fa-users"></i> Candidates</a></li>
                     <li><a href="{% url 'vote_page' %}"><i class="fas fa-vote-yea"></i> Vote</a></li>
+                  <li> <a href="{% url 'election_results' %}" class="btn">
+                        <i class="fas fa-chart-bar icon"></i> View Results
+                    </a></li>
                     <li>
                         <div class="notif-container">
                             <a href="{% url 'messages_overview' %}" class="message-link">
