--- a/template/admin_dashboard.html
+++ b/template/admin_dashboard.html
@@ -432,6 +432,12 @@
 
             <div class="stat-card total-admin">
                 <i class="fas fa-user-shield"></i>
+                <h4>Users</h4>
+                <p>{{ regular_users_count }}</p>
+            </div>
+
+            <div class="stat-card total-admin">
+                <i class="fas fa-user-shield"></i>
                 <h4>Total Admins</h4>
                 <p>{{ total_admins }}</p>
             </div>
